[gd_scene load_steps=8 format=3 uid="uid://bhwnq3jtlbacg"]

[ext_resource type="Script" path="res://menus/menu_scripts/mute_fullscreen_menu_buttons.gd" id="1_jydl7"]
[ext_resource type="Texture2D" uid="uid://cwkqpnmh2uhcj" path="res://assets/ui_buttons/fullscreen_button.png" id="2_bbrhb"]
[ext_resource type="Texture2D" uid="uid://c2uwyulvqf4wp" path="res://assets/ui_buttons/fullscreen_button_pressed.png" id="3_wb04v"]
[ext_resource type="Texture2D" uid="uid://dxe350plods2f" path="res://assets/ui_buttons/fullscreen_button_highlighted.png" id="4_h80v4"]
[ext_resource type="Texture2D" uid="uid://b8dknioj3tbtf" path="res://assets/ui_buttons/not_muted_button.png" id="5_1mnwa"]
[ext_resource type="Texture2D" uid="uid://dylr14extsgie" path="res://assets/ui_buttons/not_muted_button_pressed.png" id="6_qgkiu"]
[ext_resource type="Texture2D" uid="uid://defs2tvfb8tjb" path="res://assets/ui_buttons/not_muted_button_highlighted.png" id="7_m20sy"]

[node name="HBoxContainer" type="HBoxContainer"]
size_flags_vertical = 8
theme_override_constants/separation = 64
alignment = 1
script = ExtResource("1_jydl7")

[node name="FullscreenButton" type="TextureButton" parent="."]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_bbrhb")
texture_pressed = ExtResource("3_wb04v")
texture_hover = ExtResource("4_h80v4")

[node name="MuteButton" type="TextureButton" parent="."]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_1mnwa")
texture_pressed = ExtResource("6_qgkiu")
texture_hover = ExtResource("7_m20sy")

[connection signal="toggled" from="FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="toggled" from="MuteButton" to="." method="_on_mute_button_toggled"]
